# async-llm-inference

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
Docs/: implementation-plan.md  problem-statement.md
Docs/phases/: README.md  _CONTRACTS.md  _TEMPLATE.md  phase-1-scaffold-toolchain-domain.md  phase-2-concurrency-retry-ports.md  phase-3-persistence-sqlalchemy-alembic.md  phase-4-object-store-providers.md  phase-5-redis-streams-broker.md  phase-6-composition-root-fastapi-api.md  phase-7-worker-pipelines.md  phase-8-containerization-compose.md  phase-9-ci-readme-polish.md
docker/: Dockerfile
migrations/: env.py
migrations/versions/: 0001_create_jobs_table.py
scripts/: smoke.ps1
src/app/: __init__.py  container.py
src/app/adapters/: __init__.py
src/app/adapters/broker/: __init__.py  _errors.py  consumer.py  keys.py  messages.py  producer.py
src/app/adapters/object_store/: __init__.py  errors.py  s3.py
src/app/adapters/persistence/: __init__.py  engine.py  repository.py  tables.py
src/app/adapters/providers/: __init__.py  _errors.py  bundle.py  fake.py  huggingface.py  pinecone_store.py  search.py
src/app/api/: __init__.py  app.py  auth.py  dependencies.py  schemas.py
src/app/api/routes/: __init__.py  health.py  jobs.py
src/app/core/: __init__.py  concurrency.py  config.py  logging.py  retry.py
src/app/domain/: __init__.py  chunking.py  exceptions.py  models.py
src/app/ports/: __init__.py  object_store.py  offloader.py  providers.py  queue.py  repository.py
src/app/services/: __init__.py  ingestion.py  pipelines.py  processor.py
src/app/worker/: __init__.py  __main__.py  runner.py
tests/: conftest.py
tests/integration/: test_broker_redis.py  test_lifespan_pool.py  test_minio_roundtrip.py  test_repository_pg.py  test_worker_end_to_end.py
tests/support/: container.py  db.py  fakes.py  offloader.py  recording_providers.py
tests/unit/: test_chunking.py  test_concurrency.py  test_config.py  test_container_lifecycle.py  test_domain.py  test_pipelines.py  test_processor.py  test_repository_sqlite.py  test_retry.py
tests/unit/adapters/: conftest.py  test_bundle.py  test_error_classification.py  test_fakes.py  test_offload_invariant.py  test_real_adapters.py  test_s3_object_store.py
tests/unit/api/: test_auth.py  test_health.py  test_ingestion_retry.py  test_jobs.py
tests/unit/broker/: conftest.py  test_consumer_dispatch.py  test_consumer_idempotency.py  test_consumer_reclaim.py  test_consumer_retry_dlq.py  test_consumer_shutdown.py  test_processor_broker_contract.py  test_producer.py
tests/unit/worker/: __init__.py  test_runner_shutdown.py
